predicate/y.output

state 0
	$accept: .top $end 

	IDENT  shift 5
	.  error

	fields  goto 4
	expr  goto 3
	predicate  goto 2
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  predicate.END 
	predicate:  predicate.logic expr 

	END  shift 6
	AND  shift 8
	OR  shift 9
	.  error

	logic  goto 7

state 3
	predicate:  expr.    (2)

	.  reduce 2 (src line 35)


state 4
	expr:  fields.symbol lit 
	expr:  fields.EQUAL EQUAL NULL 
	expr:  fields.NOT EQUAL NULL 
	expr:  fields.LIKE lit 
	fields:  fields.DOT IDENT 
	fields:  fields.DOT integer 

	DOT  shift 14
	GREATER  shift 15
	LESS  shift 16
	EQUAL  shift 11
	NOT  shift 12
	LIKE  shift 13
	.  error

	symbol  goto 10

state 5
	fields:  IDENT.    (26)

	.  reduce 26 (src line 125)


state 6
	top:  predicate END.    (1)

	.  reduce 1 (src line 29)


state 7
	predicate:  predicate logic.expr 

	IDENT  shift 5
	.  error

	fields  goto 4
	expr  goto 17

state 8
	logic:  AND.AND 

	AND  shift 18
	.  error


state 9
	logic:  OR.OR 

	OR  shift 19
	.  error


state 10
	expr:  fields symbol.lit 

	MINUS  shift 25
	STRING  shift 21
	BOOLEAN  shift 22
	INTEGER  shift 26
	.  error

	lit  goto 20
	integer  goto 24
	decimal  goto 23

state 11
	expr:  fields EQUAL.EQUAL NULL 
	symbol:  EQUAL.EQUAL 

	EQUAL  shift 27
	.  error


state 12
	expr:  fields NOT.EQUAL NULL 
	symbol:  NOT.EQUAL 

	EQUAL  shift 28
	.  error


state 13
	expr:  fields LIKE.lit 

	MINUS  shift 25
	STRING  shift 21
	BOOLEAN  shift 22
	INTEGER  shift 26
	.  error

	lit  goto 29
	integer  goto 24
	decimal  goto 23

state 14
	fields:  fields DOT.IDENT 
	fields:  fields DOT.integer 

	MINUS  shift 33
	IDENT  shift 30
	INTEGER  shift 32
	.  error

	integer  goto 31

state 15
	symbol:  GREATER.    (8)
	symbol:  GREATER.EQUAL 

	EQUAL  shift 34
	.  reduce 8 (src line 63)


state 16
	symbol:  LESS.    (9)
	symbol:  LESS.EQUAL 

	EQUAL  shift 35
	.  reduce 9 (src line 65)


state 17
	predicate:  predicate logic expr.    (3)

	.  reduce 3 (src line 40)


state 18
	logic:  AND AND.    (14)

	.  reduce 14 (src line 83)


state 19
	logic:  OR OR.    (15)

	.  reduce 15 (src line 88)


state 20
	expr:  fields symbol lit.    (4)

	.  reduce 4 (src line 45)


state 21
	lit:  STRING.    (16)

	.  reduce 16 (src line 93)


state 22
	lit:  BOOLEAN.    (17)

	.  reduce 17 (src line 95)


state 23
	lit:  decimal.    (18)

	.  reduce 18 (src line 96)


state 24
	decimal:  integer.    (21)

	.  reduce 21 (src line 105)


state 25
	integer:  MINUS.INTEGER 
	decimal:  MINUS.INTEGER DOT INTEGER 

	INTEGER  shift 36
	.  error


state 26
	integer:  INTEGER.    (19)
	decimal:  INTEGER.DOT INTEGER 

	DOT  shift 37
	.  reduce 19 (src line 98)


state 27
	expr:  fields EQUAL EQUAL.NULL 
	symbol:  EQUAL EQUAL.    (12)

	NULL  shift 38
	.  reduce 12 (src line 74)


state 28
	expr:  fields NOT EQUAL.NULL 
	symbol:  NOT EQUAL.    (13)

	NULL  shift 39
	.  reduce 13 (src line 78)


state 29
	expr:  fields LIKE lit.    (7)

	.  reduce 7 (src line 58)


state 30
	fields:  fields DOT IDENT.    (24)

	.  reduce 24 (src line 116)


state 31
	fields:  fields DOT integer.    (25)

	.  reduce 25 (src line 121)


state 32
	integer:  INTEGER.    (19)

	.  reduce 19 (src line 98)


state 33
	integer:  MINUS.INTEGER 

	INTEGER  shift 40
	.  error


state 34
	symbol:  GREATER EQUAL.    (10)

	.  reduce 10 (src line 66)


state 35
	symbol:  LESS EQUAL.    (11)

	.  reduce 11 (src line 70)


state 36
	integer:  MINUS INTEGER.    (20)
	decimal:  MINUS INTEGER.DOT INTEGER 

	DOT  shift 41
	.  reduce 20 (src line 100)


state 37
	decimal:  INTEGER DOT.INTEGER 

	INTEGER  shift 42
	.  error


state 38
	expr:  fields EQUAL EQUAL NULL.    (5)

	.  reduce 5 (src line 50)


state 39
	expr:  fields NOT EQUAL NULL.    (6)

	.  reduce 6 (src line 54)


state 40
	integer:  MINUS INTEGER.    (20)

	.  reduce 20 (src line 100)


state 41
	decimal:  MINUS INTEGER DOT.INTEGER 

	INTEGER  shift 43
	.  error


state 42
	decimal:  INTEGER DOT INTEGER.    (23)

	.  reduce 23 (src line 111)


state 43
	decimal:  MINUS INTEGER DOT INTEGER.    (22)

	.  reduce 22 (src line 107)


18 terminals, 10 nonterminals
27 grammar rules, 44/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 15/240000
0 extra closures
36 shift entries, 1 exceptions
12 goto entries
3 entries saved by goto default
Optimizer space used: output 43/240000
43 table entries, 0 zero
maximum spread: 18, maximum offset: 18
